--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          submodules: true  # Initialize and update submodules
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -28,3 +30,30 @@ jobs:
           context: .
           push: true
           tags: claitz/github-repo-card-generator:latest
+
+name: Deploy to Cloud Run
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: southern-matter-451207-p6
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+    
+    - name: Build and Deploy
+      run: |
+        gcloud builds submit --tag gcr.io/southern-matter-451207-p6/github-repo-cards-generator
+        gcloud run deploy github-repo-cards-generator \
+          --image gcr.io/southern-matter-451207-p6/github-repo-cards-generator \
+          --platform managed \
+          --region us-central1 \
+          --allow-unauthenticated
